<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:layout_alignParentStart="true"
            android:textSize="22sp"
            android:background="@drawable/rectangle_one"
            android:padding="10dp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/enterYourNameTextView"
            android:layout_below="@id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name_textBox_text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_below="@id/enterYourNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/yourGameTextView"
            android:layout_below="@id/userNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_game_text"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/linearLayoutTeamNameVertical"
            android:layout_below="@id/yourGameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_one"
            android:padding="10dp"
            android:layout_margin="5dp">

        <LinearLayout
            android:id="@+id/linearLayoutTeamOneNameHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/askTeamOneNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_team_one_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/teamOneNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_one_hint"
                android:inputType="text"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTeamTwoNameHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/askTeamTwoNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_team_two_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/teamTwoNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_two_hint"
                    android:inputType="text"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTeamsHorizontal"
            android:layout_below="@id/linearLayoutTeamNameVertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayoutTeamOneVertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/teamOneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/team_one"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/teamOneGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:background="@drawable/rectangle_one"
                    android:layout_gravity="center"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/teamOneGoalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:text="@string/team_one_goal_text"/>

                <LinearLayout
                    android:id="@+id/teamOneGoalButtonsLinearLayoutHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Button
                    android:id="@+id/plusOneGoalTeamOneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plusSign"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/minusOneGoalTeamOneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minusSign"
                    android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linearLayoutTeamTwoVertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/teamTwoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/team_one"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/teamTwoGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:background="@drawable/rectangle_one"
                    android:layout_gravity="center"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/teamTwoGoalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:text="@string/team_one_goal_text"/>

                <LinearLayout
                    android:id="@+id/teamTwoGoalButtonsLinearLayoutHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/plusOneGoalTeamTwoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plusSign"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/minusOneGoalTeamTwoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minusSign"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>